Remove Java_Inheritance from Git index

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,18 @@
 {
     "cSpell.words": [
+        "abstrato",
+        "anônima",
         "Azul",
-        "Lemes"
+        "código",
+        "conciso",
+        "expressão",
+        "funcional",
+        "Isso",
+        "Lemes",
+        "método",
+        "pode",
+        "possui",
+        "único",
+        "você"
     ]
 }
