Add Abstract_Classes and Java_Inheritance

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,6 +7,8 @@
         "conciso",
         "expressão",
         "funcional",
+        "Glockenspeil",
+        "hypotesune",
         "Isso",
         "Lemes",
         "método",
