--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,6 +5,7 @@
         "Azul",
         "código",
         "conciso",
+        "Encryptable",
         "expressão",
         "funcional",
         "Glockenspeil",
