Add Java_Exceptions and Java_OOP

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,6 +13,8 @@
         "Isso",
         "Lemes",
         "método",
+        "Naboo",
+        "Pitbull",
         "pode",
         "possui",
         "único",
