--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,6 +11,7 @@
         "Glockenspeil",
         "hypotesune",
         "Isso",
+        "leftwall",
         "Lemes",
         "método",
         "Naboo",
